KFilePlacesView: Set transientParent on context menu

Without a parent widget, Qt cannot figure out what's the transient parent
if the window has no focus, resulting in the menu opening as a
standalone window.

BUG: 453532